tests/NormalTests/paczka1/small_fuzzy/35072520.err
Error in line 7: hWLpTX A9}6 71,8
Error in line 1: 1hI S595 76,2
Error in line 9: 1hI A906 81,1
Error in line 10: y9Sqieah S595 76,0
